<resources>
    <string name="app_name_city">Wrocławiu!</string>
    <string name="app_name_small">Rowerem po... Wrocławiu!</string>


    <!-- activity places menu strings-->
    <string name="places_name">Ciekawe Miejsca</string>
    <string name="foodtruck_name">FoodTrucki</string>
    <string name="it_name">Informacja \nturystyczna</string>
    <string name="services_name">Serwisy rowerowe</string>
    <string name="viewpoints_name">Punkty widokowe</string>
    <string name="wc_name">Stojaki \nParkingi \nWC</string>
    <string name="title_activity_maps">Mapa</string>
    <string name="title_activity_login">Sign in</string>
    <string name="navigation">Nawigacja</string>
    <string name="guide">Przewodnik</string>
    <string name="route">Trasy</string>
    <string name="places">Miejsca</string>
    <string name="warnings">Ostrzeżenia</string>


    <!-- Strings related to login and register -->
    <string name="register">Zarejestruj się</string>
    <string name="no_account">Nie masz jeszcze konta?</string>
    <string name="login">Zaloguj się</string>
    <string name="logout">Wyloguj się</string>
    <string name="password">Hasło</string>
    <string name="confirm_password">Powtórz hasło</string>
    <string name="user_name">Login</string>
    <string name="email">E-mail</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="login_correct">Zalogowano pomyślnie</string>
    <string name="login_incorrect">Błędny login lub hasło</string>
    <string name="passwords_not_equal">Podane hasła nie są identyczne</string>
    <string name="registration_ok">Pomyślnie zarejestrowano</string>


    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Imię</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Hasło</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Zaloguj się</string>
    <string name="text_register">Zarejestruj się</string>
    <string name="error_message_name">Podaj imię</string>
    <string name="error_message_email">Podaj właściwy email</string>
    <string name="error_message_age">Podaj wiek</string>
    <string name="error_message_password">Podaj hasło</string>
    <string name="success_message">Zarejestrowano pomyślnie</string>
    <string name="text_not_member">Nie masz jeszcze konta? Zarejestruj się!</string>
    <string name="text_already_member">Masz już konto? Zaloguj się!</string>
    <string name="error_email_exists">Konto o takim adresie email jest już w bazie</string>
    <string name="error_password_match">Hasła nie są identyczne</string>
    <string name="error_valid_email_password">Niepoprawny email lub hasło</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to map -->
    <string name="filtr_map">Filtruj</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Ustawienia</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="app_name">Rowerem po...</string>
    <string name="show_on_map">Pokaż na mapie</string>
    <string name="tourist_information">Informacja turystyczna</string>
    <string name="address">Adres</string>
    <string name="openinghours">Otwarte:</string>
</resources>
