<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_route"
            android:title="@string/route" />
        <item
            android:id="@+id/activity_maps"
            android:title="@string/title_activity_maps" />
        <item
            android:id="@+id/activty_places"

            android:title="@string/places" />
        <item
            android:id="@+id/activity_warnings"

            android:title="@string/warnings" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/settings"
            android:title="" />
    </group>


</menu>
