<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    tools:context="tryhut.wpr.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/login"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="39dp"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/abeezee_italic"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <TextView
        android:id="@+id/appNameCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/appName"
        android:layout_marginEnd="19dp"
        android:fontFamily="@font/finger_paint"
        android:rotation="20"
        android:text="@string/app_name_city"
        android:textColor="@color/accent"
        android:textSize="25sp"
        android:typeface="normal" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_below="@+id/appNameCity"
        android:layout_marginTop="79dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/login"
        android:layout_below="@+id/login"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@drawable/simple_button"
        android:text="@string/login"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/no_account"
            android:textColor="@color/textColor"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:linksClickable="true"
            android:text="@string/register"
            android:textColor="@android:color/background_dark"
            android:textColorLink="@color/textColor"
            android:textSize="12sp" />
    </LinearLayout>


</RelativeLayout>
