<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodtruck_cardview"
    card_view:cardCornerRadius="4dp"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_margin="5dp"
    android:background="@color/primary_dark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark">

        <TextView
            android:id="@+id/foodtruck_name"
            android:layout_width="294dp"
            android:layout_height="31dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/finger_paint"
            android:text="Nazwa"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/accent"
            android:textSize="24sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.671"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.501" />

        <TextView
            android:id="@+id/foodtruck_address"
            android:layout_width="172dp"
            android:layout_height="46dp"
            android:layout_marginBottom="88dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="8dp"
            android:autoLink="phone"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="serif-monospace"
            android:text="111111111"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textStyle="bold|italic"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.068"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/foodtruck_openinghours"
            android:layout_width="124dp"
            android:layout_height="49dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif-monospace"
            android:text="poniedziałek od do"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textStyle="bold|italic"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.36"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/ti_addressess"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.77" />

        <TextView
            android:id="@+id/foodtruck_website"
            android:layout_width="331dp"
            android:layout_height="31dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif-monospace"
            android:text="adressss"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimaryDark"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            card_view:layout_constraintBottom_toBottomOf="@+id/foodtruck_show_on_map_button"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.557"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/foodtruck_name"
            card_view:layout_constraintVertical_bias="0.753" />

        <ImageView
            android:id="@+id/foodtruck_img"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/foodtruck_show_on_map_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/show_on_map_normal"
            android:text="@string/show_on_map"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.532"
            card_view:layout_constraintLeft_toLeftOf="parent"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/adres_text"
            android:layout_width="134dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="casual"
            android:text="@string/address"
            android:textAlignment="center"
            android:textColor="@color/secondaryColor"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/foodtruck_address"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.16"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.986" />

        <TextView
            android:id="@+id/opening_hours_text"
            android:layout_width="134dp"
            android:layout_height="24dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="casual"
            android:text="@string/openinghours"
            android:textAlignment="center"
            android:textColor="@color/secondaryColor"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/foodtruck_address"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.964"
            card_view:layout_constraintRight_toRightOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.986" />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>